# FuelWatch

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: cbb546914ad6_initial.py
backend/app/: config.py  database.py  main.py  seed_data.py
backend/app/api/: __init__.py  alerts.py  auth.py  prices.py  stations.py
backend/app/models/: __init__.py  alert.py  station.py  user.py
backend/app/schemas/: __init__.py  alert.py  station.py  user.py
backend/app/services/: __init__.py  auth.py  parser.py
backend/app/static/: style.css
backend/app/tasks/: __init__.py  celery_app.py  parse_prices.py  send_alerts.py
backend/app/templates/: alerts.html  base.html  dashboard.html  login.html  register.html  stations.html
backend/tests/: conftest.py  test_api.py  test_auth.py
